--- a/RollName/RollName.vcxproj
+++ b/RollName/RollName.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -14,18 +14,19 @@
     <ProjectGuid>{61FD3801-1DA1-4C30-9BC8-AD86117CABA4}</ProjectGuid>
     <RootNamespace>RollName</RootNamespace>
     <Keyword>MFCProj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Dynamic</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Dynamic</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -46,11 +47,21 @@
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
+    <ReferencePath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\BCGCBPro;$(ReferencePath)</ReferencePath>
+    <LibraryPath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\Bin;$(LibraryPath)</LibraryPath>
+    <LibraryWPath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\Bin;$(LibraryWPath)</LibraryWPath>
+    <SourcePath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\BCGCBPro;$(SourcePath)</SourcePath>
+    <IncludePath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\BCGCBPro;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\BCGCBPro;$(IncludePath)</IncludePath>
+    <ReferencePath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\BCGCBPro;$(ReferencePath)</ReferencePath>
+    <LibraryPath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\Bin;$(LibraryPath)</LibraryPath>
+    <LibraryWPath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\Bin;$(LibraryWPath)</LibraryWPath>
+    <SourcePath>C:\Program Files (x86)\BCGSoft\BCGControlBarPro\BCGCBPro;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Midl>
